# mission-data-manager

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  test.txt  vcpkg.json
.github/workflows/: ci.yml
config/: mission-data-manager.toml  rules.yaml
data/: mission-metadata.db
scripts/: build-run.ps1
src/: main.cpp
src/core/metadata/: InitDb.cpp  InitDb.hpp  MetadataStore.cpp  MetadataStore.hpp  schema.sql
src/core/storage/: LocalFSBackend.cpp  LocalFSBackend.hpp
src/services/api/: HttpServer.cpp  HttpServer.hpp
